# most-common-word-crawler

./: .gitignore  README.MD  most_common_word.py  pyproject.toml  requirements.txt
src/: parse_html.py
test/: test_parse_html.py
test/html_test_examples/: wiki_microsoft.html
