[tool.poetry]
name = "most-common-word-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.0"
click = "^8.1.3"
requests = "^2.28.2"
nltk = "^3.8.1"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pytest-sugar = "^0.9.7"
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
